--- a/package.json
+++ b/package.json
@@ -2,5 +2,22 @@
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer": "^20.3.0"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "express",
+  "version": "1.0.0",
+  "description": "express",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "WebCrawler"
+  },
+  "keywords": [
+    "crawler"
+  ],
+  "author": "florent detres",
+  "license": "ISC"
 }
