--- a/package.json
+++ b/package.json
@@ -1,23 +1,7 @@
 {
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "puppeteer": "^20.3.0"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "name": "express",
-  "version": "1.0.0",
-  "description": "express",
-  "main": "server.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "WebCrawler"
-  },
-  "keywords": [
-    "crawler"
-  ],
-  "author": "florent detres",
-  "license": "ISC"
+  }
 }
